# emeleTrigger

./: .gitignore  CHANGELOG.md  CODEOWNERS  LICENSE  OMTFGraphNetwork.py  PreInstallation.md  README.md  RunOMTF.md  TrainModelFromGraph.py  best_hparams.json  converter.py  dataviz.py  example_job.sh  how_to_run (conflicted copy 2024-11-15 153646).ipynb  how_to_run.ipynb  pyproject.toml  submit.sub  submit_gpu.sub  train_basic_model.ipynb  train_basic_model.py  utils.py
Classification/: models.py  submitJobs_plot_results.py  submitJobs_training.py  transformations.py  validation.py
arch/: info.txt
configs/: dataset.yml  dataset_classification.yml  dataset_regression.yml  dataset_tau_classification.yml  hpo.yaml  prune.yaml  training_classification.yml  training_edge_classification.yml  training_edge_classification_quick.yml
data/: .gitignore  hwToLogicLayer_0x0008.xml  hwToLogicLayer_0x0209.xml
hls4ml/: README.MD
hls4ml/dnn/test_prj/: keras_model.h5
hls4ml_example/: my_model.h5  path_producer_binary.py  test.ipynb
hls4ml_example/test_prj/: build_lib.sh  hls4ml_config.yml  myproject_bridge.cpp  myproject_test.cpp  vivado_synth.tcl
hls4ml_example/test_prj/firmware/: defines.h
inputbuilder/: ROOT_to_TFRecord.ipynb
models/: mode.pth
notebooks/: 01_training_demo.ipynb  01_training_demo.py  02_training_demo.ipynb
plotter/: datasets.py  plots.py  plotter.py  setTDRStyle.py
scripts/: run_hpo.sh  setup_venv.sh
src/gnn_omtf/: __init__.py
src/gnn_omtf/batch/: __init__.py  cli.py  condor.py  hpo_optuna_100.yaml
src/gnn_omtf/compress/: __init__.py  cli.py  eval.py  precision_sweep.py  pruning.py  quantize.py
src/gnn_omtf/data/: __init__.py  cli.py  converter_utils.py  dataset.py  transforms.py
src/gnn_omtf/deploy/: __init__.py  cli.py  hls.py  onnx.py
src/gnn_omtf/metrics/: __init__.py  classification.py  regression.py
src/gnn_omtf/models/: __init__.py  gat.py  gcn.py  gnn_base.py  mpl.py  sage.py  sumGNN.py
src/gnn_omtf/optim/: __init__.py  cli.py  hpo_optuna.py  nas_darts.py
src/gnn_omtf/training/: __init__.py  callbacks.py  cli.py  loop.py  trainer.py
src/gnn_omtf/viz/: __init__.py  cli.py  graph_features.py  regression.py  training.py
test/: TestInputs.ipynb  TestInputsFromDumper.ipynb  TrainModelWithGraph_Notebook.ipynb  TrainModelWithNorm.ipynb  TrainModelWithNorm_andScales.ipynb  TrainingModel.ipynb  ValidateModel.ipynb  __init__.py  how_to_run.ipynb  model_architecture  models.py  submitJobs_DatasetCreation.py  submitJobs_graphCreation.py  submitJobs_plot_results.py  submitJobs_training.py  submit_gpu.sub  test_dataset.ipynb  test_l1nano_dataset.py  test_omtf_dataset.py  test_omtf_inputstubs.py  test_omtf_training.py
tests/: singletest.py  test_check.py  test_cli_help.py  test_models.py  test_pipeline.py
tools/: __init__.py  example_job.sh
tools/hls4ml_example/: path_producer.py  path_producer_binary.py  test.ipynb
tools/plotter/: datasets.py  draw_variables.py  plots.py  plotter.py  setTDRStyle.py
tools/training/: GraphCreationModel.py  GraphVisualizer.py  InputDataset.py  OMTFDataset.py  OMTFGraphNetwork.py  ROOT_to_TFRecord.ipynb  TrainEdgeClassificationFromGraph.py  TrainModelFromGraph.py  TrainingModelLocal.ipynb  TrainingValidation.py  _OMTFDataset.py  __init__.py  _old_OMTFGraphNetwork.py  _old_tf_utils.py  converter.py  inspect_dataset.py  models.py  pythontest.py  run_inspect_dataset.sh  run_l1nano_save_dataset.sh  run_l1nano_visualization.sh  tf_utils.py  train_basic_model.ipynb  train_basic_model.py  transformations.py  utils.py  validation.py
tools/training_v2/: OMTFGNnRequirements.txt  OMTFGnnAnalizeStudy.py  OMTFGnnConfig.yaml  OMTFGnnDataProcessing.py  OMTFGnnDownloadData.py  OMTFGnnInspectGraphs.py  OMTFGnnMain.py  OMTFGnnModel.py  OMTFGnnOptimize.py  OMTFGnnTrain.py  OMTFGnnUtils.py
(+52 files in other folders)
